test/libyul/yulSyntaxTests/if_statement_invalid_1.yul
{
    if mload {}
}
// ----
// ParserError 7104: (15-16): Builtin function "mload" must be called.
